UtahLiveDataTest/src/objects/FINET_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Grantee_Client_ID__c</fullName>
        <label>Grantee Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grantee_Client_Secret__c</fullName>
        <label>Grantee Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grantee_Integration_Root_URL__c</fullName>
        <label>Grantee Integration Root URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grantor_Client_ID__c</fullName>
        <label>Grantor Client_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grantor_Client_Secret__c</fullName>
        <label>Grantor Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grantor_Integration_Root_URL__c</fullName>
        <label>Grantor Integration Root URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>FINET Integration</label>
</CustomObject>